# embedded-rpi-scooter

./: .env  .gitmodules  LICENSE
data_overlay/usr/share/{PROGRAM_NAME}/horn/sounds/: .dataoverlayignore
dataoverlay/usr/share/{PROGRAM_NAME}/horn/sounds/: .gitignore  README.MD
scooter-control/: .gitignore  CMakeLists.txt  SConstruct  boolean.py  gpio_pin.py  horn_button_handler.py  horn_sound_player.py  main.py  pins.py  program.py  timer.py  turn_signal_state_type.py
scooter-control/audioscootercontrold/: SCsub
scooter-control/button/: __init__.py  _button.py  _button_builder.py  button.py  button_builder.py  button_options_type.py
scooter-control/button/_button_handlers/: __init__.py  _button_handler_base.py  _default_button_handler.py  _latch_button_handler.py
scooter-control/button/_button_interceptors/: __init__.py  _gpio_pin_button_interceptor.py  _keyboard_button_interceptor.py
scooter-control/button/handlers/: __init__.py  default_button_handler.py  latch_button_handler.py
scooter-control/button/interceptors/: __init__.py  gpio_pin_button_interceptor.py  keyboard_button_interceptor.py
scooter-control/daemons/audioscootercontrold/: Audio.cpp  Audio.hpp  AudioScooterControlProgram.cpp  AudioScooterControlProgram.hpp  CMakeLists.txt  HornButtonHandler.cpp  HornButtonHandler.hpp  HornSoundPlayer.cpp  HornSoundPlayer.hpp  HornSoundsLoader.cpp  HornSoundsLoader.hpp  main.cpp
scooter-control/daemons/visualscootercontrold/: CMakeLists.txt  Color.cpp  Color.hpp  LedController.cpp  LedController.hpp  LedLayer.cpp  LedLayer.hpp  VisualScooterControlProgram.cpp  VisualScooterControlProgram.h  VisualScooterControlProgram.hpp  main.cpp
scooter-control/daemons/visualscootercontrold/led_layers/: SolidColorLedLayer.cpp  SolidColorLedLayer.hpp  TurnLightLedLayer.cpp  TurnLightLedLayer.hpp
scooter-control/horn_sound_player/: README.MD  __init__.py  horn_sound_data.py  horn_sound_player.py  horn_sound_player_thread.py  horn_sound_player_thread_messages.py
scooter-control/libs/scootercontrol/: CMakeLists.txt
scooter-control/libs/scootercontrol/button/: Button.hpp  ButtonOptionType.h
scooter-control/libs/scootercontrol/button/handlers/: ButtonHandlerBase.cpp  ButtonHandlerBase.hpp  DefaultButtonHandler.cpp  DefaultButtonHandler.hpp  LatchButtonHandler.cpp  LatchButtonHandler.hpp
scooter-control/libs/scootercontrol/button/interceptors/: ButtonInterceptorBase.cpp  ButtonInterceptorBase.hpp  GPIOButtonInterceptor.cpp  GPIOButtonInterceptor.hpp
scooter-control/libs/scootercontrol/timers/: ElapsedTimeUpdatable.cpp  ElapsedTimeUpdatable.hpp  IntervalTimer.cpp  IntervalTimer.h  IntervalTimer.hpp  Timer.cpp  Timer.h  Timer.hpp
scooter-control/libs/scootercontrol/utils/: Program.cpp  Program.hpp
scooter-control/requirements_groups/: development_environment_requirements.txt
scooter-control/scootercontrol_lib/: SCsub
scooter-control/scootercontrol_lib/timers/: ElapsedTimeUpdatable.cpp  ElapsedTimeUpdatable.h  IntervalTimer.cpp  Timer.cpp  Timer.h
scooter-control/src/: main.py
scooter-control/src/Button/: _Button.py  _ButtonBuilder.py  __init__.py
scooter-control/src/Button/_ButtonHandlers/: _LatchButtonHandler.py  __init__.py
scooter-control/src/Button/_ButtonInterceptors/: _ButtonInterceptorBase.py  _GPIOPinButtonInterceptor.py  _KeyboardButtonInterceptor.py  __init__.py
scooter-control/src/Button/_ButtonTypes/: _ButtonOptionsType.py  _ButtonValueChangeType.py  __init__.py
scooter-control/src/CONSTANTS/: _CONSTANTS_LEGAL.py  _CONSTANTS_PIN.py  _CONSTANTS_PROGRAM.py  _CONSTANTS_SOUND_COLLECTION.py  __init__.py
scooter-control/src/utils/: __init__.py  _button.py  _button_utils.py
scooter-control/test/: HelloDev.py  HelloDev2.py
scooter-control/tests/: horn_sound_player_test.py
scooter-control/utils/: __init__.py  _array_utils.py  _pin_utils.py  button.py  env.py
scooter-control/visualscootercontrold/: SCsub
scripts/: _common.sh  _common_functions.sh  build-audioscootercontrold-debug.sh  build-audioscootercontrold.sh  build-debug.sh  build-visualscootercontrold-debug.sh  build-visualscootercontrold.sh  build.sh  common.sh  common_functions.sh  connect.sh  deploy-audioscootercontrold-service.sh  launch.sh  launch_main.sh  purge.sh  setup.sh
scripts/data/: apt-package-list.txt
scripts/data/python_package_lists/: board_environment_requirements.txt  development_environment_requirements.txt
scripts/data_overlay/: common.sh  common_functions.sh  copy.sh  purge.sh
scripts/dataoverlay/: _common.sh  _common_functions.sh  copy.sh  purge.sh
services/: audioscootercontrold.service  visualscootercontrold.service
